SERVER-6073 call ::_exit() instead of dbexit() after Windows service change

When processing the --install, --reinstall or --remove command line options,
just call ::_exit() to exit instead of dbexit().  We haven't done anything
to make dbexit() required, and the code that called us just uses ::_exit().